# MARC

./: .gitignore  LICENSE  MARC_one_command.ipynb  README.ko.md  README.md  SKILL.md  marc_config_template.yml  pyproject.toml  requirements.txt  run_marc.py
case_study_seoul/: README.md
case_study_seoul/MARC_reproduction_outputs/: algorithm_lag1_comparison.csv  five_axis_summary.csv  input_integrity_summary.csv  table1_positive_controls.csv  table2_contemporaneous_direction.csv  table3_cutoff_recurrence_long.csv
data/: README.md
examples/: demo_timeseries.csv  make_demo_data.py  marc_demo.yml
skills/marc/: SKILL.md
src/marc/: __init__.py  audit.py  cli.py  config.py  data.py  engines.py  report.py
