[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marc-audit"
version = "0.1.0"
description = "Multi-Axis Robustness Check for time-series causal discovery"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "PyYAML",
  "tigramite",
  "openpyxl",
  "pyarrow",
]

[project.scripts]
marc = "marc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
